# CollapsibleSplitter

./: CMakeLists.txt  CollapsibleSplitter.sln  README.md
CollapsibleSplitter/: CollapsibleSplitter.vcxproj  CollapsibleSplitter.vcxproj.filters  Layout.hpp  MainWindow.hpp  Preview.hpp  Preview.qrc  Splitter.hpp  SplitterHandle.hpp  Test.html  TrueSplitter.hpp  cpp.hint
